SET(SOURCES screens/ui_Screen1.c
    screens/ui_Settings.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_previous_png.c
    images/ui_img_previous_down_png.c
    images/ui_img_next_png.c
    images/ui_img_next_down_png.c
    images/ui_img_effect_icon_eq_png.c
    images/ui_img_effect_icon_gate_off_png.c
    images/ui_img_effect_icon_amp_off_png.c
    images/ui_img_effect_icon_cab_off_png.c
    images/ui_img_effect_icon_comp_off_png.c
    images/ui_img_effect_icon_mod_off_png.c
    images/ui_img_effect_icon_delay_off_png.c
    images/ui_img_effect_icon_reverb_off_png.c
    images/ui_img_settings_png.c
    images/ui_img_smythbuilt_png.c
    images/ui_img_bt_conn_png.c
    images/ui_img_bt_disconn_png.c
    images/ui_img_usb_ok_png.c
    images/ui_img_usb_fail_png.c
    images/ui_img_wifi_conn_png.c
    images/ui_img_wifi_disconn_png.c
    images/ui_img_skin_jcm_png.c
    images/ui_img_arrow_left_png.c
    images/ui_img_arrow_right_png.c
    images/ui_img_tick_png.c
    images/ui_img_effect_icon_amp_on_png.c
    images/ui_img_effect_icon_cab_on_png.c
    images/ui_img_effect_icon_comp_on_png.c
    images/ui_img_effect_icon_delay_on_d_png.c
    images/ui_img_effect_icon_delay_on_t_png.c
    images/ui_img_effect_icon_gate_on_png.c
    images/ui_img_effect_icon_mod_on_chorus_png.c
    images/ui_img_effect_icon_mod_on_flanger_png.c
    images/ui_img_effect_icon_mod_on_phaser_png.c
    images/ui_img_effect_icon_mod_on_rotary_png.c
    images/ui_img_effect_icon_mod_on_tremolo_png.c
    images/ui_img_effect_icon_reverb_on_p_png.c
    images/ui_img_effect_icon_reverb_on_r_png.c
    images/ui_img_effect_icon_reverb_on_s1_png.c
    images/ui_img_effect_icon_reverb_on_s2_png.c
    images/ui_img_effect_icon_reverb_on_s3_png.c
    images/ui_img_effect_icon_reverb_on_s4_png.c
    images/ui_img_pskin_bigmuff_png.c
    images/ui_img_pskin_bossblack_png.c
    images/ui_img_pskin_bosssilver_png.c
    images/ui_img_pskin_bossyellow_png.c
    images/ui_img_pskin_fuzzred_png.c
    images/ui_img_pskin_fuzzsilver_png.c
    images/ui_img_pskin_ibanezblue_png.c
    images/ui_img_pskin_ibanezdarkblue_png.c
    images/ui_img_pskin_ibanezgreen_png.c
    images/ui_img_pskin_ibanezred_png.c
    images/ui_img_pskin_klongold_png.c
    images/ui_img_pskin_lifepedal_png.c
    images/ui_img_pskin_morningglory_png.c
    images/ui_img_pskin_mxrdoubleblack_png.c
    images/ui_img_pskin_mxrdoublered_png.c
    images/ui_img_pskin_mxrsingleblack_png.c
    images/ui_img_pskin_mxrsinglegold_png.c
    images/ui_img_pskin_mxrsinglegreen_png.c
    images/ui_img_pskin_mxrsingleorange_png.c
    images/ui_img_pskin_mxrsinglewhite_png.c
    images/ui_img_pskin_mxrsingleyellow_png.c
    images/ui_img_pskin_ratyellow_png.c
    images/ui_img_skin_5150_png.c
    images/ui_img_skin_ac30_png.c
    images/ui_img_skin_ampegchrome_png.c
    images/ui_img_skin_ba500_png.c
    images/ui_img_skin_diezel_png.c
    images/ui_img_skin_elegantblue_png.c
    images/ui_img_skin_evh_png.c
    images/ui_img_skin_fenderhotrod_png.c
    images/ui_img_skin_fendertweedbig_png.c
    images/ui_img_skin_fendertwin_png.c
    images/ui_img_skin_friedmann_png.c
    images/ui_img_skin_jbdumble1_png.c
    images/ui_img_skin_jetcity_png.c
    images/ui_img_skin_jtm_png.c
    images/ui_img_skin_mesaboogiedual_png.c
    images/ui_img_skin_mesamarkv_png.c
    images/ui_img_skin_mesamarkwood_png.c
    images/ui_img_skin_modernblackplexi_png.c
    images/ui_img_skin_modernwhiteplexi_png.c
    images/ui_img_skin_orangeor120_png.c
    images/ui_img_skin_rolandjazz_png.c
    images/ui_img_skin_silverface_png.c
    images/ui_img_skin_supro_png.c
    images/ui_img_skin_tonexampblack_png.c
    images/ui_img_skin_tonexampred_png.c
    images/ui_img_skin_whitemodern_png.c
    images/ui_img_skin_woodamp_png.c)

add_library(ui ${SOURCES})
